Area Start and Biom SandArea prototype look added
Prototype look for start area added, but it needed to look more like Witness's desert, to look more cool. Beacon and new map area added.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,8 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=05DB24654E72E870D09519A15BAC1AC5
-ProjectName=Ampelos
+ProjectName=Puppetmaster's Island
 ProjectVersion=1.0
-CompanyName=title coming soon...
+CompanyName=Puppetmaster
+Description=Adventure awaits. Make your  way through thorns to the stars and you'll find the secret!
+CopyrightNotice=yes
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "6EE6D11D40A675CE78142B85F4D4DB43", "Puppetmaster\'s Island")
 
 [StartupActions]
 bAddPacks=True
