Item Definitions Deleted some old shit Added support for localization Added support for gameplay tags

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,6 +7,8 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="LOD_Tag.SandArea",NewTagName="LOD.SandArea")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="DecoType.Greece.Ruins",DevComment="")
++GameplayTagList=(Tag="DecoType.Prop.Wood.Boat",DevComment="")
 +GameplayTagList=(Tag="DecoType.Tree.Palm",DevComment="")
 +GameplayTagList=(Tag="LOD.SandArea",DevComment="")
 
