--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,5 +10,18 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DecoType.Greece.Ruins",DevComment="")
 +GameplayTagList=(Tag="DecoType.Prop.Wood.Boat",DevComment="")
 +GameplayTagList=(Tag="DecoType.Tree.Palm",DevComment="")
++GameplayTagList=(Tag="GameplayEvent.WalkingIn.Landmark.OldCinema",DevComment="")
++GameplayTagList=(Tag="GameplayEvent.WalkingIn.Landmark.Town",DevComment="")
++GameplayTagList=(Tag="Item.Type.Quest",DevComment="")
++GameplayTagList=(Tag="Item.Type.XP",DevComment="")
 +GameplayTagList=(Tag="LOD.SandArea",DevComment="")
++GameplayTagList=(Tag="Notebook.Entry001",DevComment="Unlocks first entry in Notebook")
++GameplayTagList=(Tag="Quest.MainQuest.MQ01.QuestsCompleted",DevComment="")
++GameplayTagList=(Tag="Quest.MainQuest.MQ01.Stage0.CutsceneEnded",DevComment="")
++GameplayTagList=(Tag="Quest.MainQuest.MQ01.Stage0.StageCompleted",DevComment="")
++GameplayTagList=(Tag="Quest.MainQuest.MQ01.Stage2.JournalPickedUp",DevComment="")
++GameplayTagList=(Tag="Quest.MainQuest.MQ01.Stage2.StageCompleted",DevComment="")
++GameplayTagList=(Tag="Token.GlobalXP",DevComment="")
++GameplayTagList=(Tag="Token.QuestCompleted.MQ01",DevComment="")
++GameplayTagList=(Tag="Token.Reward.LandmarkDiscoverd",DevComment="")
 
