--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -29,3 +29,44 @@ MaxChunkSize=1048576000
 FullRebuild=True
 
 [/Script/Ampelos.AmpelosGlobals]
+; DefaultGame.ini Config, Apmelos Version = 0.0, Ampelso Build Num = 100, Date = July 29, 2020, 23:26  GMT+3
+WorldMapName=Island
+ParadiseWorldMapName=Map_Name
+;This map will be used just for update checks and hotfixes
+FrontendWorldMapName=Map_Name
+BuildType=EAmpelosBuildType::PreviewBuild
+MinCameraPitch=-60.0
+MaxCameraPitch=65.0
+;Gameplay Rules
+bAllowJumping=false
+!BeginPlayCommandList=ClearArray
++BeginPlayCommandList=t.MaxFPS 6969
++BeginPlayCommandList=Stat FPS
+!LowSettingsPresetCommands=ClearArray
+!MediumSettingsPresetCommands=ClearArray
+!HighSettingsPresetCommands=ClearArray
+!VeryHighSettingsPresetCommands=ClearArray
+;Health Stat System
+DefaultHealth=100.0
+DefaultMaxHealth=100.0
+DefaultRegenHealthValue=2
+DefaultRegenHealthTime=1.5
+DefaultRegenHealthMultiplier=1.0
+;Stamina Stat System
+DefaultStamina=150.0
+DefaultMaxStamina=150.0
+DefaultStaminaCost=2.0
+DefaultStaminaRegenDelay=0.5
+DefaultStaminaUsageMultiplier=1.0
+DefaultStaminaTimerFunc=0.53
+DefaultGlobalStaminaMultiplier=1.0
+DefaultGlobalStaminaRegenMultiplier=1.0
+;Weight Stat System
+DefaultMaxWeight=128.0
+
+;This list will include or exclude items form the game, if the blacklisted they will not be spawned and will be unavailable in inventory
+!BlacklistedItems=ClearArray
+
+;Geo Tracker
+!GeoTrackerList=ClearArray
++GeoTrackerList=(GeoName="Area_Test",Height=400.0,Lenght=3689.568,Widght=2866.361,Location=(X=12569.0,Y=6389.256,Z=2560.9),Rotation=(Pitch=0,Yaw=0,Roll=0),LineThickness=1.1,LinkedToLevel="Island")
