--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,12 +9,18 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DecoType.Greece.Ruins",DevComment="")
 +GameplayTagList=(Tag="DecoType.Prop.Wood.Boat",DevComment="")
++GameplayTagList=(Tag="DecoType.Prop.Wood.Fence",DevComment="")
 +GameplayTagList=(Tag="DecoType.Tree.Palm",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.WalkingIn.Landmark.OldCinema",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.WalkingIn.Landmark.Town",DevComment="")
++GameplayTagList=(Tag="Global.XP.Adventure",DevComment="")
 +GameplayTagList=(Tag="Item.Type.Quest",DevComment="")
 +GameplayTagList=(Tag="Item.Type.XP",DevComment="")
++GameplayTagList=(Tag="LOD.OldBuilding",DevComment="")
++GameplayTagList=(Tag="LOD.OldCinema",DevComment="")
 +GameplayTagList=(Tag="LOD.SandArea",DevComment="")
++GameplayTagList=(Tag="LOD.Swamp",DevComment="")
++GameplayTagList=(Tag="LOD.Town",DevComment="")
 +GameplayTagList=(Tag="Notebook.Entry001",DevComment="Unlocks first entry in Notebook")
 +GameplayTagList=(Tag="Quest.MainQuest.MQ01.QuestsCompleted",DevComment="")
 +GameplayTagList=(Tag="Quest.MainQuest.MQ01.Stage0.CutsceneEnded",DevComment="")
