Inventory UI Support

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -33,6 +33,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DecoType.Prop.Wood.Boat",DevComment="")
 +GameplayTagList=(Tag="DecoType.Prop.Wood.Fence",DevComment="")
 +GameplayTagList=(Tag="DecoType.Tree.Palm",DevComment="")
++GameplayTagList=(Tag="Equipment.OnSelf.Trinckets.Stamina2xRegen",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.TestAbility",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.WalkingIn.Landmark.OldCinema",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.WalkingIn.Landmark.Town",DevComment="")
@@ -42,6 +43,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Item.Type.XP",DevComment="")
 +GameplayTagList=(Tag="Landmark.Major.OldCinema",DevComment="")
 +GameplayTagList=(Tag="Landmark.Major.SandArea",DevComment="")
++GameplayTagList=(Tag="Landmark.Major.Swamp",DevComment="")
 +GameplayTagList=(Tag="Landmark.Minor.LightHouse",DevComment="")
 +GameplayTagList=(Tag="Landmark.Minor.OldTownEntrance",DevComment="")
 +GameplayTagList=(Tag="Landmark.Minor.Pond",DevComment="")
@@ -65,6 +67,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="QuestScripts.PlayerPickedUpRefItem",DevComment="")
 +GameplayTagList=(Tag="QuestScripts.PlayerReachedArea",DevComment="")
 +GameplayTagList=(Tag="QuestScripts.PlayerReachedGeoTreckerArea",DevComment="")
++GameplayTagList=(Tag="Rules.Items.UI.GoldTint",DevComment="")
 +GameplayTagList=(Tag="Token.GlobalXP",DevComment="")
 +GameplayTagList=(Tag="Token.QuestCompleted.MQ01",DevComment="")
 +GameplayTagList=(Tag="Token.Reward.LandmarkDiscoverd",DevComment="")
